app/assets/stylesheets/main.scss
/* ... */
.filterBoxItem:hover{
    font-size: 25px;
}

.filterBoxItemClick {
    width: calc(100% - 10px);

    text-align: left;
    float: left;
    color: white;
    font-size: 21px;
    font-family: 'Nunito Sans';

    text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);

    padding: 10px 10px 5px 10px;
    margin-top: 10px;
}

.filterCheck {
    z-index: 1;
}

.filterCheck:hover {
    cursor: pointer;
}

.info {
    padding: 6px 8px;
    font: 14px/16px Arial, Helvetica, sans-serif;
    background: white;
    background: rgba(255,255,255,0.8);
    box-shadow: 0 0 15px rgba(0,0,0,0.2);
    border-radius: 5px;
    text-align: left;
}
.info h4 {
    margin: 0 0 5px;
    color: #777;
    text-align: center;
}

.descBoxContainer {
	height: 100%;
	width: 0px;
}

.descBox {
    background: black;
    width: 0px;
    height: 85.4vh;

    margin: 10px 0px 5px 0px;

    box-shadow: 0px 4px 5px rgba(0,0,0,.3);

    float: right;
    overflow-y: auto;
    overflow-x: hidden;

    transition: .3s ease;
}

.closeBtn {
	height: 20px;
	width: 20px;

    color: lightgray;
    background-color: black;
    float: right;
    border: none;
    font-size: 18px;

    overflow:visible;
    background:none !important;

    transition: .1s ease;
}

.closeBtn:hover{
    cursor: pointer;
    color: white;

	height: 25px;
	width: 25px;
    font-size: 22px
}

.descBoxHeader {
	font-family: 'Istok Web';
	color: lightgray; 
	font-size: 27px;
	margin: 28px 0 0 10px;


    box-sizing: border-box;
}

.descBoxItemMain {
    width: 90%;
    float: left;

    text-align: left;

    color: lightgray;
    font-size: 20px;
    font-family: 'Nunito Sans';

    margin: 10px 10px 3px 10px;

    border-bottom: 1px lightgray solid;
}

.descBoxItem {
    box-sizing: border-box;

    width: 100%;

    text-align: left;
    color: lightgray;
    font-size: 17px;
    margin: 3px 10px 3px 10px;

    float: left;
}

/* -------------- End Map CSS -------------- */

/* -------------- Home CSS -------------- */
.homeHeaderBtn {
    height: 100%;

    cursor: pointer;
    padding: 11px 10px 10px 10px;
    margin: 0px 10px 10px 20px;
    font-size: 21px;
    color: white;

    text-shadow: 3px 3px 1px rgba(0, 0, 0, 1);

    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.homeContainer {
	width: 100%;
	height: 100%;

	top: 0px;

	box-sizing: border-box !important;

	position: fixed;
}

.homeImg {
	min-height: 500px;
	height: auto;

	background-size: 100% 500px;
	background-repeat: no-repeat;

	padding-top: 175px;
	padding-left: 100px;
	padding-right: 100px;
	left: 0;
	right: 0;

	color: rgba(255,255,255,.9);
}

.homeImgTextMain {
	font-size: 80px;
	color: white;

	text-align: center;
	vertical-align: middle;
	text-shadow: 3px 3px 1px rgba(0, 0, 0, 1);
}

.homeImgTextMinor {
	font-size: 30px;
	color: white; 

	text-align: center;
	vertical-align: middle;
	text-shadow: 3px 3px 1px rgba(0, 0, 0, 1);
}

#homeFirstImgText {
	border: black 3px solid;
	padding: 10px;

	background-color: #742a2acc;
	box-shadow: 1px 1px 5px rgb(0, 0, 0);  
	border-radius: 20px; 
}

.screenContainer {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    grid-template-areas: "left right";
    align-items: center;
    height: 100vh;
}

.homeHeader {
	height: 25vh;

	position: relative;
	padding-top: 35px;
	padding-left: 200px;
	padding-right: 200px;

	box-shadow: 0px 8px 5px rgba(0, 0, 0, 0.3);

	z-index: 1;
}

.logo{
	text-align: right;

	h1{
		margin: 0;

		font-family: 'Istok Web',sans-serif;
		font-size: 60px;
		font-weight: bold;

		background: linear-gradient(175deg, #12437b 28.99%, #15a1cf);
		-webkit-background-clip: text;
		-webkit-text-fill-color: transparent;
	}
	h2{
		color: #12437b;
		margin: 0;

		font-family: 'Raleway', sans-serif;
		font-size: 35px;
	}
}

.carosalContainer {
	position: relative;

	overflow: hidden;

	height: 100%;
	z-index: 0;
}

.carousel-caption{
	cursor: pointer;

	width: 220px;
	height: 60px;

	padding: 10px;
	padding-top: 8px;
	border: 1px black solid;
	margin: 0 auto;
	margin-bottom: 20px;

	text-align: center;
	display: table;

	background-color: white;
	//background: linear-gradient(to bottom right, #12437b 40.76%, #64b3ff);
	box-shadow: 4px 4px 8px rgba(0,0,0,.8);
	border-radius: 4px;

	color: #12437b;
	text-shadow: none;

	font-family: 'Raleway', sans-serif;
	font-size: 35px;

	transition: .2s ease;

	h3{
		margin-top: 8px;
		margin-bottom: auto;
		margin-left: auto;
		margin-right: auto;
	}
}

.carousel-caption:hover{
	width: 240px;

	color: white;
	background: linear-gradient(to bottom right, #12437b 0%, #64b3ff);
}

.carousel-fade {
     width: 100%;
     height: 75vh;
     margin: auto;

    .carousel-inner {
        .item {
            transition-property: opacity;

            img{
            	min-height: 80vh;
            	max-height: 80vh;
            }
        }
        
        .item,
        .active.left,
        .active.right {
            opacity: 0;
        }

        .active,
        .next.left,
        .prev.right {
            opacity: 1;
        }

        .next,
        .prev,
        .active.left,
        .active.right {
            left: 0;
            transform: translate3d(0, 0, 0);
        }
    }

    .carousel-control {
        z-index: 2;
    }
}

.carousel-indicators li {
	cursor: pointer;
	display: inline-block;

    width: 50px;
    height: 5px;
    margin: 1px;

    text-indent: -999px;

    background-color: #000\9;
    background-color: rgba(0,0,0,0);
    border: 1px solid #fff;
    border-radius: 1px;
}

.carousel-indicators .active {

    width: 50px;
    height: 5px;

    margin: 0;
    background-color: #fff;
}

.gradient {
	grid-area: left;
	background: #000;
	background: linear-gradient(135deg, #1E88E5 0%, #fadee0 40%);
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="$main",endColorstr="$second",GradientType=1);
	height: 100%;
	width: 100%;
	z-index: 1;
	opacity: 0.2;
}

